# BnB-lib

./: .gitignore  CMakeLists.txt  LICENSE  bnbtest.cpp  bnbtree.cpp  bnbtree.h  bnbtree_impl.h  bnbtypes.h  dfs.h  subproblem.h
include/: bnbtree.h  bnbtypes.h  brfs.h  cbfs.h  subproblem.h
src/: CMakeLists.txt  bfs.cpp  bfs.h  bnbtree.cpp  bnbtree.h  brfs.cpp  cbfs.cpp  dfs.cpp  dfs.h  search.h  subproblem.h
test/: CMakeLists.txt  bnbtest.cpp  simple_subproblems.cpp  simple_subproblems.h
